--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
   left: 0;
   bottom: 0;
   width: 230px;
-  background-color: #e9c992;
+  background-color: #111111;
   padding: 15px;
   overflow-y: auto;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
